# urban-classifier

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  README.md  README_DOWNLOAD.md  TASK.md  download_lcz_map.sh  pyproject.toml
.claude/commands/: clean-code.md  commit.md  execute-prp.md  implement-feature.md
PRPs/: urban-classifier-crate.md
examples/: basic_usage.rs  heathrow_demo.py  heathrow_prediction.py  python_demo.py  scotland_prediction.py  single_point_demo.py  test_europe_only.py  test_multiple_locations.py  test_partial_file.py
src/: classifier.rs  error.rs  lcz.rs  lib.rs  main.rs  python.rs  spatial.rs
tests/: integration.rs
