[package]
name = "urban_classifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gdal = "0.16"
gdal-sys = { version = "0.9", features = ["bindgen"] }
geo-types = "0.7"
polars = { version = "0.36", features = ["lazy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]
optional = true

[dependencies.pyo3-polars]
version = "0.10"
optional = true

[features]
default = []
python = ["pyo3", "pyo3-polars"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "stream"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.indicatif]
version = "0.17"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.dirs]
version = "5.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "download_wudapt"
path = "src/bin/download_wudapt.rs"

[profile.release]
lto = true
codegen-units = 1
