[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "urban-classifier"
version = "0.1.0"
description = "High-performance urban classification using Local Climate Zone (LCZ) system"
authors = [{name = "Richard Lyon", email = "richard@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]

[tool.maturin]
module-name = "urban_classifier"